<package>
  <name>semantic_map_test</name>
  <version>0.0.1</version>
  <description>
    Semantic map testing suite.
  </description>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>

  <license>LGPL</license>

  <author>Ralf Kaestner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>semantic_map_common</build_depend>
  <build_depend>semantic_map_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>semantic_map_common</run_depend>
  <run_depend>semantic_map_conversions</run_depend>
</package>
